test/compile_errors/err_for_pattern_invalid.w
//! expect-error: expected pattern

fn main:
    let values = [1, 2, 3]
    for in values:
        assert(false)
